--- a/package.json
+++ b/package.json
@@ -6,10 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:seed": "npx tsx prisma/seed.ts"
+  },
+  "prisma": {
+    "seed": "npx tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
+    "@prisma/client": "^6.19.0",
+    "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.3",
     "next": "^15.5.6",
+    "next-auth": "^5.0.0-beta.30",
+    "prisma": "^6.19.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
