--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "db:seed": "npx tsx prisma/seed.ts",
-    "postinstall": "prisma generate"
+    "postinstall": "node scripts/prisma-generate.js",
+    "prisma:generate": "prisma generate"
   },
   "prisma": {
     "seed": "npx tsx prisma/seed.ts"
