--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "Frostburg Clothing - Premium Outdoor & Casual Wear - Next.js 15 App Router Version",
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build && node scripts/copy-prisma-binaries.js",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:seed": "npx tsx prisma/seed.ts",
-    "postinstall": "prisma generate"
+    "db:seed": "npx tsx prisma/seed.ts"
   },
   "prisma": {
     "seed": "npx tsx prisma/seed.ts"
